--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "~1.7.1",
     "express": "~4.16.2",
     "he": "~1.1.1",
+    "redis": "^2.8.0",
     "valid-url": "~1.0.9"
   },
   "devDependencies": {
